fix: solve Align Bottom Left on Vertical Layout for Desktop

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -497,8 +497,8 @@ main[tabindex="-1"] {
       }
 
       &.desktop-alignBottomLeft {
-        justify-content: flex-start;
-        align-items: flex-end;
+        justify-content: flex-end;
+        align-items: flex-start;
       }
       /*  */
 
